Bugfix: zen-grid-item-width() returns wrong width when box-sizing is content-box

--- a/stylesheets/zen/_grids.scss
+++ b/stylesheets/zen/_grids.scss
@@ -95,6 +95,9 @@ $zen-reverse-all-floats: false !default;
   // Calculate the unit width.
   $unit-width: zen-unit-width($column-count, $grid-width);
 
+  // Calculate the item's width.
+  $width: zen-grid-item-width($column-span, $column-count, $gutter-width, $grid-width, $box-sizing);
+
   // Determine the float direction and its reverse.
   $dir: $float-direction;
   @if $reverse-all-floats {
@@ -103,15 +106,6 @@ $zen-reverse-all-floats: false !default;
   $rev: zen-direction-flip($dir);
 
   float: $dir;
-  $width: $column-span * $unit-width;
-  @if $box-sizing == content-box {
-    @if not comparable($width, $gutter-width) {
-      $units-gutter: unit($gutter-width);
-      $units-grid: unit($grid-width);
-      @warn "The layout cannot be calculated correctly; when using box-sizing: content-box, the units of the gutter (#{$units-gutter} did not match the units of the grid width (#{$units-grid}).";
-    }
-    $width: $width - $gutter-width;
-  }
   width: $width;
   margin: {
     #{$dir}: ($column-position - 1) * $unit-width;
@@ -266,15 +260,7 @@ $zen-reverse-all-floats: false !default;
   $rev: zen-direction-flip($dir);
 
   // Calculate the item's width.
-  $width: zen-grid-item-width($column-span, $columns, $grid-width);
-  @if $box-sizing == content-box {
-    @if not comparable($width, $gutter-width) {
-      $units-gutter: unit($gutter-width);
-      $units-grid: unit($grid-width);
-      @warn "The layout cannot be calculated correctly; when using box-sizing: content-box, the units of the gutter (#{$units-gutter} did not match the units of the grid width (#{$units-grid}).";
-    }
-    $width: $width - $gutter-width;
-  }
+  $width: zen-grid-item-width($column-span, $columns, $gutter-width, $grid-width, $box-sizing);
   width: $width;
 
   // Auto-apply the unit base mixin.
@@ -337,9 +323,20 @@ $zen-reverse-all-floats: false !default;
 @function zen-grid-item-width (
   $column-span,
   $column-count: $zen-column-count,
-  $grid-width: $zen-grid-width
+  $gutter-width: $zen-gutter-width,
+  $grid-width: $zen-grid-width,
+  $box-sizing: $zen-box-sizing
 ) {
-  @return $column-span * zen-unit-width($column-count, $grid-width);
+  $width: $column-span * zen-unit-width($column-count, $grid-width);
+  @if $box-sizing == content-box {
+    @if not comparable($width, $gutter-width) {
+      $units-gutter: unit($gutter-width);
+      $units-grid: unit($grid-width);
+      @warn "The layout cannot be calculated correctly; when using box-sizing: content-box, the units of the gutter (#{$units-gutter} did not match the units of the grid width (#{$units-grid}).";
+    }
+    $width: $width - $gutter-width;
+  }
+  @return $width;
 }
 
 // Returns the opposite direction, given "left" or "right".
