--- a/templates/unit-tests/sass/function-zen-grid-item-width.scss
+++ b/templates/unit-tests/sass/function-zen-grid-item-width.scss
@@ -27,6 +27,12 @@
   width: zen-grid-item-width(2, 5);
   $zen-grid-width: 100%;
 
-  /* Test zen-grid-item-width(2, 5, 100px) */
-  width: zen-grid-item-width(2, 5, 100px);
+  /* Test zen-grid-item-width(2, 5, $grid-width: 1000px) */
+  width: zen-grid-item-width(2, 5, $grid-width: 1000px);
+
+  /* Test zen-grid-item-width(2, 5, $grid-width: 1000px, $box-sizing: content-box) */
+  width: zen-grid-item-width(2, 5, $grid-width: 1000px, $box-sizing: content-box);
+
+  /* Test zen-grid-item-width(2, 5, $gutter-width: 10px, $grid-width: 1000px, $box-sizing: content-box) */
+  width: zen-grid-item-width(2, 5, $gutter-width: 10px, $grid-width: 1000px, $box-sizing: content-box);
 }
